--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,6 @@ body {
     flex-basis: 600px;
 }
 
-
 .form__fieldset {
     background-color: white;
     margin: 5px;
@@ -42,14 +41,16 @@ body {
 }
 
 .form__field {
-    margin-bottom: 10px;
-    max-width: 100%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    width: 100%;
     padding: 10px;
     border-radius: 5px;
     border-color: #ccc;
 }
 
 .form__label {
+    padding: 15px;
     font-style: italic;
 }
 
@@ -65,10 +66,12 @@ body {
     border-color: #ccc;
 }
 
+
 .form__textInformation {
     font-size: 12px;
 }
 
 .form__valuePosition {
+    display: flex;
     justify-content: flex-end;
 }
