--- a/src/index.css
+++ b/src/index.css
@@ -17,61 +17,6 @@ body {
     background-position: center;
 }
 
-.container {
+.flexContainer {
     flex-basis: 600px;
-}
-
-.form__fieldset {
-    background-color: white;
-    margin: 5px;
-    padding: 5px 50px;
-    border-color: #eee;
-    border-radius: 5px;
-    box-shadow: 3px 3px 15px 0px rgba(102, 102, 102, 0.37);
-}
-
-.form__legend {
-    background-color: teal;
-    color: white;
-    border-radius: 5px;
-    padding: 15px;
-    font-size: 20px;
-    border-color: #eee;
-    box-shadow: 3px 3px 15px 0px rgba(102, 102, 102, 0.37);
-}
-
-.form__field {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    border-color: #ccc;
-}
-
-.form__label {
-    padding: 15px;
-    font-style: italic;
-}
-
-.form__field:hover {
-    background-color: hsl(0, 0%, 95%);
-}
-
-.form__fieldInformation {
-    background-color: #eee;
-    margin-top: 30px;
-    width: 75px;
-    border-radius: 5px;
-    border-color: #ccc;
-}
-
-
-.form__textInformation {
-    font-size: 12px;
-}
-
-.form__valuePosition {
-    display: flex;
-    justify-content: flex-end;
 }
