--- a/src/Form/Clock/style.css
+++ b/src/Form/Clock/style.css
@@ -1,9 +1,6 @@
 .clock {
-  display: flex;
-  justify-content: flex-end;
+  text-align: end;
   font-family: monospace;
   font-style: italic;
   font-size: 12px;
-
-
 }
